fix horizontal scroll if legend has vertical scroll

--- a/less/legend.less
+++ b/less/legend.less
@@ -17,7 +17,7 @@
 .graphical-report {
   &__legend {
     padding: 20px 0 20px 10px;
-    margin-right: 20px;
+    margin-right: 30px;
     width: 160px;
     box-sizing: border-box;
 
